<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context=".Update_Activity_Entrevista">



            <EditText
                android:id="@+id/carpeta_input_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/carpeta_de_investigaci_n_delito"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="26dp" />

            <EditText
                android:id="@+id/nombre_input_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre_del_entrevistado"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/domicilio_input_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/domicilio_del_entrevistado"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/telefono_input_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefono_del_entrevistado"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/entrevista_input_update"
                android:layout_width="match_parent"
                android:layout_height="292dp"
                android:ems="10"
                android:gravity="center|top"
                android:hint="@string/entrevista"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textMultiLine" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/boton_editar_entrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.258"
            app:srcCompat="@drawable/ic_modificar"
            app:tint="@color/purple_500"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/editar_entrevista"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.539"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boton_editar_entrev"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>