<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    tools:context=".Agregar_notas">

    <EditText
        android:id="@+id/nombre_colocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre_del_evento"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hora_colocar"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/hora_del_evento"

        android:inputType="time"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        tools:ignore="KeyboardInaccessibleWidget" />

    <EditText
        android:id="@+id/fecha_colocar"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:layout_above="@+id/nota_colocar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="10dp"
        android:layout_toEndOf="@+id/hora_colocar"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/fecha_del_evento"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hora_colocar"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198"
        tools:ignore="KeyboardInaccessibleWidget,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/nota_colocar"
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/narraci_n_del_evento"
        android:inputType="textMultiLine"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_colocar"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/boton_agregar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/nombre_colocar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_gravity="center|end"
        android:layout_marginStart="-19dp"
        android:layout_marginEnd="-4dp"
        android:fontFamily="@font/anton_normal"
        android:text="@string/agregar_evento_a_bitacora"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932"
        app:strokeColor="#04FDD8" />


</androidx.constraintlayout.widget.ConstraintLayout>